<resources>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="nav_header_title">Agence du Soleil</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Paramètres</string>
    <string name="parola">Parola</string>
    <string name="app_name">Agence du Soleil</string>
    <string name="action_sign_in_short">Inscription</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, entrez au minimum 6 caractères!</string>
    <string name="auth_failed">Echec de l\'authentification, vérifiez votre mot de passe ou email ou inscrivez-vous</string>
    <string name="change_email">Modifier Email</string>
    <string name="change_password">Modifier Password</string>
    <string name="send_password_reset_email">Envoyer un email de réinitialisation d\'email</string>
    <string name="remove_user">Supprimer utilisateur</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Connection</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Nom</string>
    <string name="btn_login">SE CONNECTER</string>
    <string name="btn_link_to_register">Pas encore membre? Inscrivez-vous !</string>
    <string name="btn_link_to_login">Déjà inscrit. Connectez-vous!</string>
    <string name="title_activity_reset_password">Réinitialisation mot de passe</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">Réinitialiser son mot de passe</string>
    <string name="btn_back"><![CDATA[<< Retour]]></string>
    <string name="hint_new_email">Nouvel Email</string>
    <string name="btn_change">Modifier</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Se déconnecter</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">Nous avons besoin de votre email enregistré pour vous envoyez les informations de réinitialisation.</string>
    <string name="title_activity_maps">Map</string>
    <string name="changer_de_langue">Changer de langue</string>
    <string name="internet_check">Vérifier la connexion internet</string>
    <string name="internet_warning">L\\\'application nécessite une connexion Internet pour fonctionner correctement!</string>
    <string name="se_d_connecter">Se déconnecter</string>

    <string name="chateau">Château</string>
    <string name="maison">Maison</string>
    <string name="boutique">Boutique</string>
    <string name="local_commercial">Local Commercial</string>
    <string name="locaux">Locaux</string>
    <string name="inclure_les_terrains_vierges">Inclure les terrains vierges</string>
    <string name="suivant">Suivant</string>

    <string name="mcarre">m²</string>
    <string name="quelle_surface">Quelle surface ?</string>
    <string name="surface_minimum">Surface minimum</string>
    <string name="surface_maximum">Surface maximum</string>
    <string name="nombre_de_pieces">Nombre de pièces :</string>
    <string name="quel_est_votre_budget_maximum">Quel est votre budget maximum ?</string>
    <string name="budget_maximal">Budget maximal</string>
    <string name="euro">€</string>
    <string name="valider_button">Valider</string>
    <string name="titre_resultat">Résultat</string>
    <string name="titre_de_l_annonce">Titre de l\'annonce</string>
    <string name="ville">Ville</string>
    <string name="aix_en_provence">Aix-en-Provence</string>
    <string name="maison_2_tages">Maison 2 étages</string>
    <string name="_13080">13080</string>
    <string name="code_postal">Code Postal</string>
    <string name="prix_demand">Prix demandé</string>
    <string name="_300_m">300 m²</string>
    <string name="surface">Surface habitable</string>
    <string name="nombre_de_pi_ces">Nombre de pièces</string>
    <string name="_400_m">400 m²</string>
    <string name="surface_du_terrain">Surface du terrain</string>
    <string name="_3_all_e_des_jardiniers">3 allée des Jardiniers</string>
    <string name="appartement">Appartement</string>

    <string name="bureaux">Bureaux</string>
    <string name="_600_000">600 000 $</string>

    <string-array name="pieces">
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item>5+</item>
    </string-array>

</resources>