<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B1C8C"
    tools:context=".Filters.Filter3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="37dp">

            <TextView
                android:id="@+id/title_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quel_est_votre_budget_maximum"
                android:textSize="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/budget_max"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/budget_maximal"
                android:theme="@style/MyEditTextTheme"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textColorHint="#d9d9d9"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/euros"
                android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:text="@string/euro"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="#be6ae2">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dot3_3" />

        <Button
            android:id="@+id/next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="220dp"
            android:background="@null"
            android:text="Suivant"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>